# alice-rag-llm

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  dockerhub.yml  docs.yml  lint.yml  static.yml
.workflows/: ci.yml
bicep/: README.md  launch.sh
bicep/app/: appservice.bicep  main.bicep  roleassignment.bicep
bicep/infra/: main.bicep
docs/: api.rst  conf.py  description.rst  index.rst  infra.rst  usage.rst
docs/_templates/: module.rst
src/: app.py  config.yaml  store.py
src/alice_rag_llm/: __init__.py
src/store/: default__vector_store.json  docstore.json  index_store.json
tests/: test_store.py
