[project]
name = "alice-rag-llm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Philippe Miron", email = "philippemiron@gmail.com" }
]

dependencies = [
    "streamlit>=1.36.0",
    "google-generativeai>=0.7.0",
    "pyyaml>=6.0.1",
    "llama-index>=0.10.50",
    "llama-index-embeddings-huggingface>=0.2.2",
    "sphinx-book-theme>=1.1.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "ipython>=8.25.0",
    "sphinx>=7.3.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-book-theme>=1.1.3",
    "pytest>=8.2.2",
]

[tool.rye.scripts]
clean = { cmd = "rm -Rf docs/_build/ docs/_autosummary/ src/store src/documents"}
docs = { cmd = "sphinx-build -M html docs docs/_build -W --keep-going"}
embeddings = { cmd = "python src/store.py"}
tests = { cmd = "pytest tests"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]
